Added coverage reporting to build file.
do: gradle test coverage_report