@@ -7,12 +7,27 @@ buildscript {
     }
 }
 
+configurations {
+    jacocoant
+    jacoco
+    antjunit
+}
+
+dependencies {
+    jacoco 'org.jacoco:org.jacoco.agent:0.6.2.201302030002'
+    jacocoant 'org.jacoco:org.jacoco.ant:0.6.2.201302030002'
+    antjunit 'org.apache.ant:ant-junit:1.8.4'
+}
+
 
 allprojects {
     apply plugin: 'idea'
     apply plugin: 'eclipse'
     apply plugin: 'java'
-    apply plugin: 'jacoco'
+
+    configurations {
+        codeCoverage
+    }
 
     repositories {
         mavenCentral()
@@ -21,14 +36,15 @@ allprojects {
     dependencies {
         compile fileTree(dir: new File(rootDir, 'libs'), include: '*.jar')
         compile 'org.jacoco:org.jacoco.agent:0.6.2.201302030002'
+        codeCoverage group: 'org.jacoco', name: 'org.jacoco.agent', version: '0.6.2.201302030002', classifier: 'runtime'
     }
 
-    jacocoTestReport {
-        reports {
-            xml.enabled = false
-            csv.enabled = false
-            html.enabled = true
-        }
+    test {
+        jvmArgs "-javaagent:${configurations.codeCoverage.singleFile}=destfile=${rootDir}/coverage/jacoco.exec,sessionid=HSServ,append=true",
+                '-Djacoco=true',
+                '-Xms128m',
+                '-Xmx512m',
+                '-XX:MaxPermSize=128m'
     }
 }
 
@@ -71,6 +87,74 @@ task test_foo << {
     System.out.println(project(':common').file("build/lib/common.jar"));
 }
 
+task coverage_report(dependsOn: 'compileTestJava') << {
+
+    //
+    // Get jacoco jar.
+    //
+    File jacocoJar = null;
+    project(':common').configurations.compile.each { file ->
+        if (file.name.indexOf('jacoco') > 0) {
+            jacocoJar = file;
+        }
+    }
+
+    File root = new File(projectDir, "coverage");
+
+    root.mkdirs();
+
+    File coverageReport = new File(root, "reports");
+
+    //
+    // Delete old reports.
+    //
+    if (coverageReport.exists()) {
+        org.apache.commons.io.FileUtils.deleteDirectory(coverageReport);
+    }
+
+    coverageReport.mkdirs();
+
+    ant.taskdef(name: "jacocoreport", classname: "org.jacoco.ant.ReportTask", classpath: configurations.jacocoant.asPath);
+
+    ant {
+        jacocoreport {
+            executiondata {
+                fileset(dir: "${rootDir}/coverage/") {
+                    file(file: 'jacoco.exec')
+                }
+            }
+
+            structure(name: rootProject.name) {
+
+                classfiles {
+                    fileset dir: "${rootDir}/common/build/classes/main"
+                    fileset dir: "${rootDir}/crypto/build/classes/main"
+                    fileset dir: "${rootDir}/mixnet/build/classes/main"
+                    fileset dir: "${rootDir}/node/build/classes/main"
+                }
+
+                // this is for Windows
+                sourcefiles(encoding: 'UTF8') {
+                    fileset dir: "${rootDir}/common/src/main/java"
+                    fileset dir: "${rootDir}/crypto/src/main/java"
+                    fileset dir: "${rootDir}/mixnet/src/main/java"
+                    fileset dir: "${rootDir}/node/src/main/java"
+                }
+            }
+
+            xml destfile: "${coverageReport}/ximix.xml"
+            html destdir: "${coverageReport}"
+        }
+    }
+
+    //
+    // Delete source file..
+    //
+    // new File("{$rootDir}/coverage/jacoco.exe").delete();
+
+
+}
+
 
 task make_node_jar(dependsOn: 'compileJava') << {
 
@@ -98,20 +182,20 @@ task make_node_jar(dependsOn: 'compileJava') << {
 
     File jarFile = new File(root, "XimixNode.jar");
 
-    ant.jar(destfile: jarFile,  manifest: new File(projectDir,"installer/manifest/MANIFEST.MF")) {
+    ant.jar(destfile: jarFile, manifest: new File(projectDir, "installer/manifest/MANIFEST.MF")) {
         fileset(dir: new File(projectDir, 'common/build/classes/main/'));
         fileset(dir: new File(projectDir, 'crypto/build/classes/main/'));
         fileset(dir: new File(projectDir, 'mixnet/build/classes/main/'));
         fileset(dir: new File(projectDir, 'node/build/classes/main/'));
 
-        zipfileset(includes: '**/*.class', src: new File(projectDir,libsJarPath));
+        zipfileset(includes: '**/*.class', src: new File(projectDir, libsJarPath));
     }
 
     println("");
-    println("Created: "+jarFile);
+    println("Created: " + jarFile);
     println();
     println("To run a demo node:\r\n");
-    println("java -jar "+jarFile+" demo/conf/mixnet.xml demo/conf/node1.xml");
+    println("java -jar " + jarFile + " demo/conf/mixnet.xml demo/conf/node1.xml");
     println();
 
 }
